--- a/index.html
+++ b/index.html
@@ -13,38 +13,7 @@
       <div class="modal-container">
         <h2 class="hidden">모달 창</h2>
         <div class="modal-content">
-          <button type="button" class="modal-content__close-btn">
-            <div></div>
-          </button>
-          <div class="modal-content__img-wrap">
-            <img src="./imgs/daum_full.png" alt="" />
-          </div>
-          <div class="modal-content__txt-wrap">
-            <h3 class="modal-content__tit">포트폴리오 이름</h3>
-            <ul class="modal-content__info-list">
-              <li class="modal-content__info-item workers">제작 인원 : 1</li>
-              <li class="modal-content__info-item period">제작 기간 : 1개월</li>
-              <li class="modal-content__info-item skills">
-                사용 기술 : HTML5,CSS3
-              </li>
-              <li class="modal-content__info-item purpose">
-                제작 목표 : 자바스크립트 실력 향상
-              </li>
-            </ul>
-
-            <p class="modal-content__desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Exercitationem, molestias! Laborum, porro quis! At incidunt nobis,
-              nam deserunt vero distinctio labore necessitatibus expedita
-              inventore sint. Nulla asperiores eum eveniet voluptates quos?
-              Tempore ut sequi maiores enim ipsam id molestiae nesciunt optio
-              velit accusantium expedita minus, consequuntur atque dicta amet
-            </p>
-            <div class="modal-content__links">
-              <a href="#">Github 바로가기</a>
-              <a href="#">사이트 바로가기</a>
-            </div>
-          </div>
+          <!-- 여기에 모달 콘텐츠 들어감 -->
         </div>
       </div>
       <!-- ------------------------------------------------------ -->
