내용 모두 채우기

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
               >
               <label class="filter-container__check-item"
                 ><input id="all-projects" type="checkbox" checked />모든
-                프로젝트 보기
-              </label>
+                프로젝트 보기 </label
+              ><label class="filter-container__check-item"
+                ><input type="checkbox" id="responsive" />반응형</label
+              >
               <label class="filter-container__check-item"
                 ><input checked disabled type="checkbox" />최신순</label
               >
