반응형 제작

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>포트폴리오 페이지</title>
+    <title>포트폴리오 모음</title>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./responsive.css" />
   </head>
   <body>
     <div class="full-container">
@@ -19,8 +20,12 @@
       <!-- ------------------------------------------------------ -->
       <div class="inner-width">
         <div class="page-tit-container">
-          <h1>포트폴리오 페이지</h1>
-          <p>카드를 클릭하시면 설명이 나옵니다.</p>
+          <h1>Portfolio Hub</h1>
+          <p>
+            제 작업들을 한눈에 볼 수 있는 포트폴리오입니다. <br />
+            카드를 클릭하면 각 프로젝트의 간단한 설명과 링크를 확인하실 수
+            있습니다.
+          </p>
         </div>
         <!-- ------------------------------------------------------ -->
         <div class="filter-container">
