주요 프로젝트 보기를 초기값으로 설정

--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
             <h3>다른 옵션</h3>
             <div class="filter-container__check-list">
               <label class="filter-container__check-item"
-                ><input id="key-projects" type="checkbox" />주요 프로젝트만
-                보기</label
+                ><input id="key-projects" type="checkbox" checked />주요
+                프로젝트만 보기</label
               >
               <label class="filter-container__check-item"
-                ><input id="all-projects" type="checkbox" checked />모든
-                프로젝트 보기 </label
+                ><input id="all-projects" type="checkbox" />모든 프로젝트 보기 </label
               ><label class="filter-container__check-item"
                 ><input type="checkbox" id="responsive" />반응형</label
               >
